fix search bugs

--- a/src/index.css
+++ b/src/index.css
@@ -748,7 +748,6 @@ input[type="password"]::-ms-clear {
 }
 
 /* перебиття стилів від браузера при автозаповненні */
-/* замість background - box-shadow, бо перший ігнорується барузером, другий накладається */
 @layer utilities {
   input:-webkit-autofill,
   input:-webkit-autofill:hover,
@@ -759,8 +758,8 @@ input[type="password"]::-ms-clear {
   select:-webkit-autofill,
   select:-webkit-autofill:hover,
   select:-webkit-autofill:focus {
-    box-shadow: 0 0 0px 1000px transparent inset; /* фон передостанній параметр */
-    -webkit-text-fill-color: var(--textBlack); /* 👈 колір тексту */
-    transition: background-color 5000s ease-in-out 0s; /* 👈 хак для Safari/Chrome */
+    box-shadow: 0 0 0px 1000px transparent inset;
+    -webkit-text-fill-color: var(--textBlack);
+    transition: background-color 5000s ease-in-out 0s;
   }
 }
